--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -42,6 +42,7 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  text-decoration: none;
 }
 a:active,
 a:hover {
@@ -623,7 +624,54 @@ pre tt:after {
 .muted {
   color: rgb(135, 135, 135);
 }
+
+/* Overrides */
 .chart {
   margin: 50px auto;
   padding: 10px;
+}
+
+.footer {
+  border: 2px solid teal;
+}
+
+.wrapper {
+  height: calc(100vh - 200px);
+  padding: 0 5%;
+  margin-top: 120px;
+  margin-bottom: 80px;
+  overflow-y: scroll;
+}
+main {
+  max-width: 960px;
+  margin: 20px auto;
+}
+header {
+  background: rebeccapurple;
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
+footer {
+  width: 100%;
+  position: fixed;
+  height: 80px;
+  bottom: 0;
+  background: rebeccapurple;
+}
+.links {
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+}
+.link {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+.link:nth-child(2n) {
+  background: rgba(255, 255, 255, 0.1)
 }
