--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -622,6 +622,7 @@ pre tt:after {
   }
 }
 .muted {
+  font-size: .7rem;
   color: rgb(135, 135, 135);
 }
 
@@ -629,35 +630,34 @@ pre tt:after {
 .chart {
   margin: 50px auto;
   padding: 10px;
+  width: 65%;
 }
-
-.footer {
-  border: 2px solid teal;
-}
+.chart-lg { width: 80%; }
 
 .wrapper {
-  height: calc(100vh - 200px);
-  padding: 0 5%;
-  margin-top: 120px;
-  margin-bottom: 80px;
-  overflow-y: scroll;
+  /* height: calc(100vh - 180px); */
+  height: 100vh;
+  /* margin-top: 120px; */
+  margin-bottom: 60px;
+  overflow-y: auto;
+
 }
 main {
   max-width: 960px;
   margin: 30px auto;
+  padding: 20px 2%;
 }
 header {
   background: rebeccapurple;
-  width: 100%;
   position: fixed;
   top: 0;
-  height: 120px;
+  padding: 1%;
 }
 header a {  color: white; }
 footer {
   width: 100%;
   position: fixed;
-  height: 80px;
+  height: 60px;
   bottom: 0;
   background: rebeccapurple;
 }
